# vr-idt

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
vr_idt/: main.py  parser.py  vr_idt.py
