[build-system]
requires = [
	 "setuptools>=58",
	 "wheel"
	 ]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 90
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
| \.git
| \.pytest_cache
| \.tox
| \.venv
| schema_dir
| scripts
| build
| dist
| setup.py
)/
'''