[metadata]
name = vr-itd-ajpkim
version = 0.0.1
author = Alex Kim
author_email = alex@ajpkim.com
description = Mixed reality eye tracking classification algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajpkim/vr-itd
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8