[metadata]
name = vr-idt-ajpkim
version = 0.0.1
author = Alex Kim
author_email = alex@ajpkim.com
description = Virtual reality eye tracking event classification algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajpkim/vr-idt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
  = vr_idt
packages = find:
install_requires=
  numpy
  pandas
python_requires = >=3.8

[options.packages.find]
where = vr_idt

# [options.entry_points]
#   console_scripts =
#     vr-idt = vr_idt.cli:main